--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bootstrap-icons": "^1.8.3",
     "chart.js": "^3.8.0",
     "chartjs-color": "^2.4.1",
+    "imagekitio-angular": "^1.0.2",
     "ng-apexcharts": "^1.7.1",
     "ng2-charts": "^3.0.11",
     "ngx-perfect-scrollbar": "^10.1.1",
