--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^14.0.2",
     "@angular/platform-server": "^14.0.2",
     "@angular/router": "^14.0.2",
+    "@auth0/angular-jwt": "^5.1.1",
     "@material/radio": "^14.0.0",
     "@ng-bootstrap/ng-bootstrap": "12.1.2",
     "@ngx-translate/core": "^14.0.0",
@@ -36,6 +37,7 @@
     "chart.js": "^3.8.0",
     "chartjs-color": "^2.4.1",
     "imagekitio-angular": "^1.0.2",
+    "moment": "^2.29.4",
     "ng-apexcharts": "^1.7.1",
     "ng2-charts": "^3.0.11",
     "ngx-perfect-scrollbar": "^10.1.1",
